refactor for xsmpproject
add a main configuration file xsmp.project at the project root